--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
       <artifactId>spring-security-taglibs</artifactId>
       <version>5.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.15</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
