--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,12 @@
       <version>5.3.15</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.15</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
